--- a/index.html
+++ b/index.html
@@ -46,24 +46,27 @@
 
             <p><span class="year">━━━━━━━━━━━━━ In 150 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your money would be worth</p>
+            <img src="images/Porsche.svg" alt="$100 Bill">
             <p>$150,798</p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 190 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment will finally reach</p>
+            <img src="images/villa.svg" alt="$100 Bill">
             <p>$1,061,614</p>
 
-            <p>Finally a millionaire
-            <img src="images/money-on-grave.jpg" alt="Money on the grave"></p>
+            <p>Finally a millionaire</p>
 
             <p>But why stop there?</p>
             <p><span class="year">━━━━━━━━━━━━━ In 300 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment would reach</p>
+            <img src="images/island.svg" alt="$100 Bill">
             <p>$227,339,613</p>
 
             <p>Enough money to feed 1,894 families for a decade</p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 340 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment would be worth</p>
+            <img src="images/yacht.svg" alt="$100 Bill">
             <p>$1,600,890,708</p>
 
             <p>Making you one of the 3,200 Billionaires in the world.</p>
@@ -73,13 +76,15 @@
             <p>But what if we wait some more?</p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 450 years ━━━━━━━━━━━━━</span></p>
-            <p class="textUnderYear">You would be richer than Elon Musk (Networth: 225B)</p>
-            <p>Your net worth in 450 years:<p>
-            <p>$>342,913,498,804</p>
-
+            <p class="textUnderYear">You would be richer than Elon Musk (Networth: $225B)</p>
+            <img src="images/elon musk.svg" alt="$100 Bill">
+            <p>Your Networth in 450 years:<p>
+            <p>$342,913,498,804</p>
             <p>And just 50 years later...</p>
             <p><span class="year">━━━━━━━━━━━━━ In 500 years ━━━━━━━━━━━━━</span></p>
-            <p>You would be richer than the richest man who ever lived (Emperor Musa, estimated Net worth: 400B $)</p>
+            <p>You would be richer than the richest man who ever lived
+                 (Emperor Mansa Musa, estimated Net worth: 400B $)</p>
+                 <img src="images/MansaMusa.svg" alt="$100 Bill">
             <p>Your net worth in 500 years:</p>
             <p>$3,932,326,182,722</span></p>
             
@@ -89,11 +94,16 @@
 
             <p>That's 517 Trillion</p>
             
-            <p>For reference:</p>
+            <p class="year">━━━━━━━━━━━━━ For reference: ━━━━━━━━━━━━━</p>
             <p>According to a 2023 report, the total amount of money in the world is roughly only $40 trillion in circulation.</p>
 
             <p>So what's stopping you?</p>
             <p>What's stopping you from opening an Investment Portfolio and crashing the world economy in 600 years?</p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
         </div>
     </div>
 </body>
