--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
             <p class="year">━━━━━━━━━━━━━ In the last 50 years ━━━━━━━━━━━━━</p>
             <p class="textUnderYear">, the S&P 500 averaged a return of <span class="money">~10%</span> per year.</p>
             <img src="images/S&P500.svg" alt="$100 Bill">
-            <p class="year">━━━━━━━━━━━━━ Meanwhile... ━━━━━━━━━━━━━</p>
+            <p class="year closer">━━━━━━━━━━━━━ Meanwhile... ━━━━━━━━━━━━━</p>
             <p>...the average inflation rate per year was <span class="money">~4%</span></p>
             <img src="images/Money burn.svg" alt="$100 Bill">
-            <p>So let's estimate an average return on investment of <span class="money">~5%</span> per year on the S&P 500.</p>
+            <p class="closer">So let's estimate an average return on investment of <span class="money">~5%</span> per year on the S&P 500.</p>
             <p>If you would put your <span class="money">$100</span> into the S&P 500…</p>
             <p>
                 <span class="year">━━━━━━━━━━━━━ Then in 20 years ━━━━━━━━━━━━━</span>  
             </p>
             <p class="textUnderYear">Your <span class="money">$100</span> would be worth</p>
             <img src="images/250dollar.svg" alt="$100 Bill">
-            <p><span class="money">$265</span></p>
+            <p class="closer"><span class="money">$265</span></p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 40 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">It would be worth</p>
             <img src="images/700dollar.svg" alt="$100 Bill">
-            <p><span class="money">$700</span></p>
+            <p class="closer"><span class="money">$700</span></p>
 
             <p>How much money would you have on your deathbed?</p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 80 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your <span class="money">$100</span> would be worth</p>
             <img src="images/iphones.svg" alt="$100 Bill">
-            <p><span class="money">$4,956</span></p>
+            <p class="closer"><span class="money">$4,956</span></p>
 
             <p>Okay, in your lifetime you can't create generational wealth.</p>
             <p>But how about your grandchildren?</p>
@@ -47,12 +47,12 @@
             <p><span class="year">━━━━━━━━━━━━━ In 150 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your money would be worth</p>
             <img src="images/Porsche.svg" alt="$100 Bill">
-            <p class="money">$150,798</p>
+            <p class="money closer">$150,798</p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 190 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment will finally reach</p>
             <img src="images/villa.svg" alt="$100 Bill">
-            <p class="money">$1,061,614</p>
+            <p class="money closer">$1,061,614</p>
 
             <p>Finally a millionaire</p>
 
@@ -60,14 +60,14 @@
             <p><span class="year">━━━━━━━━━━━━━ In 300 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment would reach</p>
             <img src="images/island.svg" alt="$100 Bill">
-            <p class="money">$227,339,613</p>
+            <p class="money closer">$227,339,613</p>
 
             <p>Enough money to feed <span class="money">1,894 families</span> for a decade</p>
 
             <p><span class="year">━━━━━━━━━━━━━ In 340 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment would be worth</p>
             <img src="images/yacht.svg" alt="$100 Bill">
-            <p class="money">$1,600,890,708</p>
+            <p class="money closer">$1,600,890,708</p>
 
             <p>Making you one of the <span class="money">3,200</span> Billionaires in the world.</p>
 
@@ -78,19 +78,20 @@
             <p><span class="year">━━━━━━━━━━━━━ In 450 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">You would be richer than Elon Musk<br> (Networth: <span class="money">$225B</span>)</p>
             <img src="images/elon musk.svg" alt="$100 Bill">
-            <p>Your Networth in <span class="money">450</span> years: <br>
+            <p class="closer">Your Networth in <span class="money">450</span> years: <br>
             <span class="money">$342,913,498,804</span></p>
             <p>And just <span class="money">50 years</span> later...</p>
+
             <p><span class="year">━━━━━━━━━━━━━ In 500 years ━━━━━━━━━━━━━</span></p>
             <p>You would be richer than the richest man who ever lived<br>
                  (Emperor Mansa Musa, estimated Net worth: <span class="money">400B $</span> )</p>
                  <img src="images/MansaMusa.svg" alt="$100 Bill">
-            <p>Your net worth in <span class="money">500</span> years:<br>
+            <p class="closer">Your net worth in <span class="money">500</span> years:<br>
             <span class="money">$3,932,326,182,722</span></p>
             
             <p><span class="year">━━━━━━━━━━━━━ And  In 600 years ━━━━━━━━━━━━━</span></p>
             <p class="textUnderYear">Your investment would be worth</p>
-            <p><span class="amount">$517,105,839,289,867</span></p>
+            <p><span class="money">$517,105,839,289,867</span></p>
 
             <p>That's <span class="money">517 Trillion $</span></p>
             
