fixed divider line

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <h1>How to create generational wealth</h1>
-        <p class="year">━━━━━━━━━━━━━ (A Tutorial) ━━━━━━━━━━━━━</p>
+        <div class="yearwrapper">  
+        <div class="year"> (A Tutorial) </div>
+        <div class="divider"></div>
+        </div>
         <div class="scroll">
             <p class="textUnderYear">Do you have <span class="money">$100</span>?</p>
             <img src="images/100 dollars.svg" alt="$100 Bill">
@@ -82,6 +85,7 @@
             <span class="money">$342,913,498,804</span></p>
             <p>And just <span class="money">50 years</span> later...</p>
 
+            
             <p><span class="year">━━━━━━━━━━━━━ In 500 years ━━━━━━━━━━━━━</span></p>
             <p>You would be richer than the richest man who ever lived<br>
                  (Emperor Mansa Musa, estimated Net worth: <span class="money">400B $</span> )</p>
