--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="year"> In the last 50 years </p>
             <div class="divider"></div>
             </div>
-            <p class="textUnderYear">, the S&P 500 averaged a return of <span class="money">~10%</span> per year.</p>
+            <p class="textUnderYear">the S&P 500 averaged a return of <span class="money">~10%</span> per year.</p>
             <img src="images/S&P500.svg" alt="$100 Bill">
             <div class="yearwrapper">  
             <p class="year closer"> Meanwhile... </p>
