--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <p><span class="year"> In 500 years </span></p>
             <div class="divider"></div>
             </div>
-            <p>You would be richer than the richest man who ever lived<br>
+            <p class="textUnderYear">You would be richer than the richest man who ever lived<br>
                  (Emperor Mansa Musa, estimated Net worth: <span class="money">400B $</span> )</p>
                  <img src="images/MansaMusa.svg" alt="$100 Bill">
             <p class="closer">Your net worth in <span class="money">500</span> years:<br>
@@ -152,8 +152,6 @@
 
             <p>So what's stopping you?</p>
             <p>What's stopping you from opening an Investment Portfolio<br> and crashing the world economy in <span class="money">600</span> years?</p>
-            <p> </p>
-            <p> </p>
             <p> </p>
             <p> </p>
             <p> </p>
